[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/admob/scripts/AdMobConfig.gd" type="Script" id=1]

[node name="AdMobConfig" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_right = 250.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enabled" type="CheckBox" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 24.0
pressed = true
text = "Enabled"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Real" type="CheckBox" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 500.0
margin_bottom = 52.0
text = "Real"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestEuropeUserConsent" type="CheckBox" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 500.0
margin_bottom = 80.0
pressed = true
text = "Test Europe User Consent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerSizeHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 500.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/BannerSizeHBoxContainer"]
margin_top = 3.0
margin_right = 75.0
margin_bottom = 17.0
text = "Banner Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerSize" type="OptionButton" parent="VBoxContainer/BannerSizeHBoxContainer"]
margin_left = 79.0
margin_right = 161.0
margin_bottom = 20.0
text = "BANNER"
items = [ "BANNER", null, false, 0, null, "MEDIUM_RECTANGLE", null, false, 1, null, "FULL_BANNER", null, false, 2, null, "LEADERBOARD", null, false, 3, null, "SMART_BANNER", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BannerOnTop" type="CheckBox" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 500.0
margin_bottom = 132.0
pressed = true
text = "Banner On Top"

[node name="ChildDirectedTreatment" type="CheckBox" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 500.0
margin_bottom = 160.0
pressed = true
text = "Child Directed Treatment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxAdContentRating" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 500.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="VBoxContainer/MaxAdContentRating"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
text = "MaxAdContentRating"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="OptionButton" parent="VBoxContainer/MaxAdContentRating"]
margin_left = 136.0
margin_right = 175.0
margin_bottom = 20.0
text = "G"
items = [ "G", null, false, 0, null, "PG", null, false, 1, null, "T", null, false, 2, null, "MA", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIds" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 188.0
margin_right = 500.0
margin_bottom = 318.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="VBoxContainer/UnitIds"]
margin_top = 58.0
margin_right = 58.0
margin_bottom = 72.0
text = "UNIT IDS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/UnitIds"]
margin_left = 62.0
margin_right = 462.0
margin_bottom = 130.0
rect_min_size = Vector2( 400, 130 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Android" type="Tabs" parent="VBoxContainer/UnitIds/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/UnitIds/TabContainer/Android"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="HBoxContainer" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer"]
margin_right = 374.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Banner"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "Banner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Banner"]
margin_left = 49.0
margin_right = 352.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/1033173712"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Interstitial" type="HBoxContainer" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer"]
margin_top = 28.0
margin_right = 374.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Interstitial"]
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
text = "Interstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Interstitial"]
margin_left = 71.0
margin_right = 374.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/1033173712"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Rewarded" type="HBoxContainer" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer"]
margin_top = 56.0
margin_right = 374.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Rewarded"]
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
text = "Rewarded"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Rewarded"]
margin_left = 66.0
margin_right = 369.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/5224354917"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="iOS" type="Tabs" parent="VBoxContainer/UnitIds/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/UnitIds/TabContainer/iOS"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Banner" type="HBoxContainer" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer"]
margin_right = 374.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Banner"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "Banner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Banner"]
margin_left = 49.0
margin_right = 352.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/2934735716"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Interstitial" type="HBoxContainer" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer"]
margin_top = 28.0
margin_right = 374.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Interstitial"]
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
text = "Interstitial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Interstitial"]
margin_left = 71.0
margin_right = 374.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/4411468910"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="Rewarded" type="HBoxContainer" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer"]
margin_top = 56.0
margin_right = 374.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Rewarded"]
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
text = "Rewarded"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="LineEdit" parent="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Rewarded"]
margin_left = 66.0
margin_right = 369.0
margin_bottom = 24.0
text = "ca-app-pub-3940256099942544/1712485313"
align = 1
expand_to_text_length = true
virtual_keyboard_enabled = false

[node name="InstallationTutorial" type="LinkButton" parent="VBoxContainer"]
margin_top = 322.0
margin_right = 500.0
margin_bottom = 336.0
text = "INSTALLATION TUTORIAL"

[connection signal="pressed" from="VBoxContainer/Enabled" to="." method="_on_Enabled_pressed"]
[connection signal="pressed" from="VBoxContainer/Real" to="." method="_on_Real_pressed"]
[connection signal="pressed" from="VBoxContainer/TestEuropeUserConsent" to="." method="_on_TestEuropeUserConsent_pressed"]
[connection signal="item_selected" from="VBoxContainer/BannerSizeHBoxContainer/BannerSize" to="." method="_on_BannerSize_item_selected"]
[connection signal="pressed" from="VBoxContainer/BannerOnTop" to="." method="_on_BannerOnTop_pressed"]
[connection signal="pressed" from="VBoxContainer/ChildDirectedTreatment" to="." method="_on_ChildDirectedTreatment_pressed"]
[connection signal="item_selected" from="VBoxContainer/MaxAdContentRating/Value" to="." method="_on_MaxAdContentRating_item_selected"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Banner/Value" to="." method="_on_AndroidBanner_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Interstitial/Value" to="." method="_on_AndroidInterstitial_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/Android/VBoxContainer/Rewarded/Value" to="." method="_on_AndroidRewarded_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Banner/Value" to="." method="_on_iOSBanner_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Interstitial/Value" to="." method="_on_iOSInterstitial_text_changed"]
[connection signal="text_changed" from="VBoxContainer/UnitIds/TabContainer/iOS/VBoxContainer/Rewarded/Value" to="." method="_on_iOSRewarded_text_changed"]
[connection signal="pressed" from="VBoxContainer/InstallationTutorial" to="." method="_on_InstallationTutorial_pressed"]
